--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "express-fileupload": "^1.4.0",
     "express-handlebars": "^6.0.6",
     "mysql2": "^2.3.3",
     "nodemon": "^2.0.20",
